Fix footer alignment and padding

--- a/frontend/src/components/atoms/ScrollToTop/ScrollToTop.scss
+++ b/frontend/src/components/atoms/ScrollToTop/ScrollToTop.scss
@@ -12,7 +12,7 @@
   z-index: 1;
 
   @media screen and ($tablet) {
-    bottom: 60px;
+    bottom: 8px;
   }
 
   svg {
